--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,11 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "cross-env": "^5.2.0",
-    "nuxt": "^2.8.0",
-    "element-ui": "^2.9.1",
-    "@nuxtjs/axios": "^5.5.4"
+    "@nuxtjs/axios": "^5.5.4",
+    "cross-env": "^7.0.2",
+    "nuxt": "^2.8.0"
   },
   "devDependencies": {
-    "nodemon": "^1.18.9"
+    "nodemon": "^2.0.3"
   }
 }
